@@ -1,3 +1,4 @@
+6/21/13 provide prototype properties via inherit() instead of attaching to Type.prototype
 # 0.0.0-5 6/21/13
 6/21/13 delete unused mvt
 6/21/13 adjust layout so that play area content is vertically centered
